fix line spacing

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -36,6 +36,14 @@ strong {
   font-weight: 600;
 }
 
+sup {
+  vertical-align: baseline;
+  position: relative;
+  top: -0.4em;
+  font-size: 0.75em;
+  line-height: 0;
+}
+
 a {
   color: #0098ff;
   text-decoration: none;
